classDiagram
    HTMLElement <|-- CustomElement
    CustomElement <|-- ApolloElement
    ApolloElement <|-- ApolloQuery
    ApolloElement <|-- ApolloMutation
    ApolloElement <|-- ApolloSubscription

    class CustomElement {
        <<Interface>>
    }

    class ApolloElement~Data, Vars~ {
        <<Interface>>
        data: Data
        variables: Vars
    }

    class ApolloQuery {
        <<Interface>>
        query: DocumentNode
        ...
    }

    class ApolloMutation {
        <<Interface>>
        mutation: DocumentNode
        ...
    }

    class ApolloSubscription {
        <<Interface>>
        subscription: DocumentNode
        ...
    }
